# ceres

./: .gitignore  LICENSE.md  Makefile  README.md  ceres  meson.build
docs/: grammar.bnf  syntax.md
docs/examples/: hello.crs
include/: error.h  lexer.h  parser.h  token.h
include/ast/: expr.h  node.h  operator.h  types.h  value.h  variable.h
src/: error.cpp  main.cpp
src/ast/: value.cpp  variable.cpp
src/lexer/: lexer.cpp
src/parser/: parser.cpp
